bookstack/deployment-bookstack-db.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bookstack-db
  namespace: bookstack
spec:
  selector:
    matchLabels:
      app: bookstack-db
  template:
    metadata:
      labels:
        app: bookstack-db
    spec:
      containers:
      - name: bookstack-db
        image: lscr.io/linuxserver/mariadb
        ports:
        - containerPort: 3306
        volumeMounts:
        - mountPath: /config
          name: config
      volumes:
      - name: config
        persistentVolumeClaim: 
          claimName: bookstack-db-config
