bookstack/bookstack-db-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: bookstack-db
  namespace: bookstack
spec:
  selector:
    app: bookstack-db
  ports:
  - port: 3306
    targetPort: 3306
